# yggdrasil-migrator

./: .gitignore  AGENTS.md  FINAL_REPORT.md  MONGODB_API_TESTING.md  PHASE5_SUMMARY.md  README.md  REFACTOR_PROGRESS.md  package.json  pyproject.toml
.github/skills/CLEAR/: SKILL.md
.github/skills/CODES/: SKILL.md
.github/skills/COMMIT/: SKILL.md
.github/skills/DELIVER/: SKILL.md
.github/skills/DOCS/: SKILL.md
.github/skills/IMPLEMENT/: SKILL.md  TEMPLATE.md
.github/skills/REFACT/: SKILL.md
.github/skills/SCAFF/: SKILL.md
.github/skills/SECURE/: SKILL.md
backend/: .env.example
backend/app/: config.py  db.py  main.py
backend/scripts/: keycloak-pre-migration-v2-ready-only.json  update_keycloak1_lastname_from_ready.py  update_keycloak1_lastname_from_ready_client_credentials.py
backend/yggdrasil_migrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/prompts/: create-personal-migration-view.prompt  disable-mongo-keycloak-temporarily.prompt  keycloak-connections-field-null-filter.prompt  mapping-rules-use-selected-model-document.prompt  mongo-to-keycloak-update.prompt  update-personal-migration-database-view.prompt
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  App.vue.backup  main.ts
tests/: conftest.py  test_bson_serialization.py  test_exploration_filters.py  test_keycloak_feature_flags.py  test_keycloak_schema.py  test_keycloak_service.py  test_migration_service.py  test_postgres_service.py  test_template_schema.py  test_templates_repository.py
(+63 files in other folders)
