[project]
name = "yggdrasil-migrator"
version = "0.1.0"
description = "MongoDB migration orchestrator with FastAPI, Celery, and Vue 3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "motor>=3.6.0,<4.0",
  "psycopg[binary]>=3.2.0",
  "celery[redis]>=5.3.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.22.0",
  "httpx>=0.26.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}
packages = ["app"]
